--- a/about-us.html
+++ b/about-us.html
@@ -104,12 +104,12 @@
 									<ul
 										class="header-social-icons social-icons social-icons-clean social-icons-icon-dark social-icons-medium me-2 mb-0 d-none d-sm-block ms-1">
 										<li class="social-icons-instagram">
-											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank" title="Instagram"><i
-													class="fab fa-instagram"></i></a>
+											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+												title="Instagram"><i class="fab fa-instagram"></i></a>
 										</li>
 										<li class="social-icons-facebook">
-											<a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank" title="Facebook"><i
-													class="fab fa-facebook-f"></i></a>
+											<a href="https://www.facebook.com/profile.php?id=61565031478867"
+												target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -146,10 +146,10 @@
 													</a>
 												</li>
 												<li>
-                                                    <a class="nav-link" href="catering.html">
-                                                        Catering
-                                                    </a>
-                                                </li>
+													<a class="nav-link" href="catering.html">
+														Catering
+													</a>
+												</li>
 												<li>
 													<a class="nav-link" href="menu.html">
 														Menu
@@ -215,7 +215,8 @@
 							</h2>
 							<p class="text-2">The creative minds behind <b>Khana Khazana</b>, <b>Chef Abhishek Patel</b>
 								and <b>Chef
-									Daxesh Shah</b>, are culinary artisans dedicated to showcasing the essence of Indian
+									Dakshesh Shah</b>, are culinary artisans dedicated to showcasing the essence of
+								Indian
 								flavors. With years of expertise in the art of cooking, they bring an unparalleled level
 								of craftsmanship to every dish.
 							</p>
@@ -226,7 +227,8 @@
 							<h2 class="font-weight-bold">
 								Join Us for a Culinary Adventure!
 							</h2>
-							<p>Step into <b>Khana Khazana</b> and indulge in a feast of flavors that take you on a journey
+							<p>Step into <b>Khana Khazana</b> and indulge in a feast of flavors that take you on a
+								journey
 								across India. Whether you’re craving the richness of creamy Paneer Butter Masala, the
 								comforting warmth of Dal Tadka, or the crispy goodness of Masala Dosas, we have
 								something for everyone.</p>
@@ -374,9 +376,11 @@
 					<div class="row text-center pb-5">
 						<div class="col">
 							<ul class="social-icons social-icons-clean custom-social-icons mb-3">
-								<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
+								<li class="social-icons-facebook"><a
+										href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
 										title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-								<li class="social-icons-instagram"><a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+								<li class="social-icons-instagram"><a
+										href="https://www.instagram.com/khana_khazana1760/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
