--- a/catering.html
+++ b/catering.html
@@ -104,12 +104,12 @@
                                     <ul
                                         class="header-social-icons social-icons social-icons-clean social-icons-icon-dark social-icons-medium me-2 mb-0 d-none d-sm-block ms-1">
                                         <li class="social-icons-instagram">
-											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank" title="Instagram"><i
-													class="fab fa-instagram"></i></a>
-										</li>
+                                            <a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+                                                title="Instagram"><i class="fab fa-instagram"></i></a>
+                                        </li>
                                         <li class="social-icons-facebook">
-                                            <a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank" title="Facebook"><i
-                                                    class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.facebook.com/profile.php?id=61565031478867"
+                                                target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -204,8 +204,9 @@
                         <div class="col-lg-7 col-sm-7">
                             <h2 class="font-weight-bold">Namaste & Welcome to Khana Khazana Catering</h2>
                             <p>At <b>Khana Khazana</b>, we believe that every celebration deserves an extraordinary
-                                dining experience. Guided by our culinary visionaries, Chef Abhishek Patel and Chef
-                                Daxesh Shah, we bring the richness of authentic Indian flavors to your special
+                                dining experience. Guided by our culinary visionaries,<b> Chef Abhishek Patel </b> and
+                                <b>Chef
+                                    Dakshesh Shah</b>, we bring the richness of authentic Indian flavors to your special
                                 occasions. Whether it's a grand wedding, a corporate event, or an intimate gathering,
                                 our catering services ensure a memorable feast for you and your guests.</p>
 
@@ -221,7 +222,31 @@
                     </div>
                 </div>
             </section>
-
+            <div id="examples" class="container mt-5">
+                <div class="row">
+                    <div class="col">
+                        <section class="call-to-action with-borders with-button-arrow mb-5">
+                            <div class="col-sm-9 col-lg-9">
+                                <div class="call-to-action-content">
+                                    <h3>From Our <strong class="font-weight-extra-bold">Kitchen </strong> to Your Plate
+                                        we bring you authentic taste
+                                        to <strong class="font-weight-extra-bold">your table!</strong>
+                                    </h3>
+                                    <p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/17323669116"
+                                            target="_blank">+1 732 366 9116</a> for others</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-lg-3">
+                                <div class="call-to-action-btn">
+                                    <a href="contact-us.html" class="btn btn-modern text-2 btn-primary">Contact Us</a>
+                                    <span class="arrow hlb d-none d-md-block" data-appear-animation="rotateInUpLeft"
+                                        style="left: 100%; top: -32px;"></span>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
             <section class="section section-no-border bg-color-light m-0">
                 <div class="container">
                     <div class="row">
@@ -235,8 +260,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/Birthday Parties.jpg" alt
-                                            class="img-fluid" />
+                                        <img src="img/catering/Birthday Parties.jpg" alt class="img-fluid" />
                                     </a>
                                 </span>
                                 <span class="thumb-info-caption">
@@ -256,8 +280,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/Wedding.jpg" alt
-                                            class="img-fluid" />
+                                        <img src="img/catering/Wedding.jpg" alt class="img-fluid" />
                                     </a>
                                 </span>
                                 <span class="thumb-info-caption">
@@ -277,8 +300,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/Corporate Events.jpg" alt
-                                            class="img-fluid" />
+                                        <img src="img/catering/Corporate Events.jpg" alt class="img-fluid" />
                                     </a>
                                 </span>
                                 <span class="thumb-info-caption">
@@ -319,8 +341,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/Private Dinners.jpg  " alt
-                                            class="img-fluid" />
+                                        <img src="img/catering/Private Dinners.jpg  " alt class="img-fluid" />
                                     </a>
                                 </span>
                                 <span class="thumb-info-caption">
@@ -399,9 +420,11 @@
                     <div class="row text-center pb-5">
                         <div class="col">
                             <ul class="social-icons social-icons-clean custom-social-icons mb-3">
-                                <li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
+                                <li class="social-icons-facebook"><a
+                                        href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
                                         title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-icons-instagram"><a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+                                <li class="social-icons-instagram"><a
+                                        href="https://www.instagram.com/khana_khazana1760/" target="_blank"
                                         title="Instagram"><i class="fab fa-instagram"></i></a></li>
                             </ul>
                             <p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
