--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 	<!-- Mobile Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+	<link rel="stylesheet" href="css/demo-landing.css">
+
 
 	<!-- Web Fonts  -->
 	<link id="googleFonts"
@@ -39,7 +41,6 @@
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
-
 	<!-- Theme CSS -->
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/theme-elements.css">
@@ -104,12 +105,12 @@
 									<ul
 										class="header-social-icons social-icons social-icons-clean social-icons-icon-dark social-icons-medium me-2 mb-0 d-none d-sm-block ms-1">
 										<li class="social-icons-instagram">
-											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank" title="Instagram"><i
-													class="fab fa-instagram"></i></a>
+											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+												title="Instagram"><i class="fab fa-instagram"></i></a>
 										</li>
 										<li class="social-icons-facebook">
-											<a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank" title="Facebook"><i
-													class="fab fa-facebook-f"></i></a>
+											<a href="https://www.facebook.com/profile.php?id=61565031478867"
+												target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -199,7 +200,8 @@
 											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">We are set for a grand opening on March 2, 2025 ! <br> Stay tuned for a culinary journey!
+												data-plugin-options="{'minWindowWidth': 0}">We are set for a grand
+												opening on March 2, 2025 ! <br> Stay tuned for a culinary journey!
 											</h1>
 										</div>
 									</div>
@@ -342,33 +344,259 @@
 					</div>
 				</div>
 			</section>
-			<section class="section section-no-border bg-color-grey-scale-1 m-0">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-7 col-sm-7">
-							<h2 class="font-weight-bold">Exquisite Indian Catering for Every Occasion</h2>
-							<p>At <b>Khana Khazana</b>, we bring the magic of authentic Indian cuisine to your special
-								events. Whether it’s an intimate gathering or a grand celebration, our catering services
-								ensure an unforgettable dining experience with rich flavors, vibrant spices, and
-								handcrafted delicacies.</p>
-							<p class="text-2">Our expert chefs carefully curate menus that blend traditional recipes
+
+			<section class="section section-no-border pb-0  mb-0">
+				<div class="container pt-4">
+					<div class="row align-items-center justify-content-between">
+						<div class="col-lg-4">
+							<h2 class="text-7 font-weight-semibold line-height-2 mb-2">Catering Excellence for Every
+								Occasion</h2>
+							<p>Enjoy our Regular, Swaminarayan, Jain, or Customized Catering – delicious meals tailored
+								to your event, straight from our kitchen.</p>
+						</div>
+						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
+							<img src="img/catering/icons/REGULAR.png" alt="Regular Catering" class="img-fluid"
+								style="width: 50px; height: 50px;">
+							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Regular<br>Catering</h4>
+						</div>
+						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
+							<img src="img/catering/icons/SWAMINARAYAN.png" alt="Swaminarayan Catering" class="img-fluid"
+								style="width: 50px; height: 50px;">
+							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Swaminarayan<br>Catering
+							</h4>
+						</div>
+						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
+							<img src="img/catering/icons/JAIN.png" alt="Jain Catering" class="img-fluid"
+								style="width: 50px; height: 50px;">
+							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Jain<br>Catering</h4>
+						</div>
+						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
+							<img src="img/catering/icons/CUSTOMIZE.png" alt="Customize Catering" class="img-fluid"
+								style="width: 50px; height: 50px;">
+							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Customize<br>Catering
+							</h4>
+						</div>
+						<div class="col-sm-12">
+							<hr class="my-5">
+							<h2 class="font-weight-bold text-center text-10 pt-3 mb-4">Exquisite Indian Catering for
+								Every Occasion</h2>
+						</div>
+						<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
+							<p class="text-4">At Khana Khazana, we bring the magic of authentic Indian cuisine to your
+								special events. Whether it’s an intimate gathering or a grand celebration, our catering
+								services ensure an unforgettable dining experience with rich flavors, vibrant spices,
+								and handcrafted delicacies.</p>
+						</div>
+						<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
+							<p class="text-4">Our expert chefs carefully curate menus that blend traditional recipes
 								with modern culinary artistry, ensuring every dish is a feast for the senses. From
 								weddings and corporate events to private parties and cultural festivities, we cater to
 								all occasions with passion and excellence.</p>
-							<a href="catering.html"
-								class="btn btn-primary custom-btn-style-1 text-uppercase mt-4">Explore Our Catering</a>
 						</div>
-						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
-							<div class="custom-box-squares">
-								<img class="custom-cloud left-pos-2" alt src="img/catering/Wedding.jpg" />
-							</div>
-						</div>
+					</div>
+					<div class="image-wrapper position-relative z-index-3 appear-animation text-center"
+						data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500"
+						data-appear-animation-duration="750" style="height: 0; padding-bottom: 16%;">
+						<img src="img/lazy.png" data-src="img/catering/Wedding.jpg" class="lazyload img-fluid"
+							alt="The Most Customizable Template">
 					</div>
 				</div>
 			</section>
 
+			<section class="section section-no-border section-angled mt-5 section-dark pb-0 m-0"
+				style="background-repeat: no-repeat; background-color: #509b44 !important;"
+				data-src="img/reason_bg.png">
+				<div class="section-angled-layer-top section-angled-layer-increase-angle bg-color-grey"
+					style="padding: 4rem 0;"></div>
+				<div class="spacer py-md-4 my-md-5"></div>
+				<div class="container pt-5 mt-5">
+					<div class="row align-items-center pt-md-5 mt-5">
+						<div class="col-lg-6 offset-lg-1 position-relative mb-5">
+							<div class="appear-animation" data-appear-animation="fadeIn"
+								data-appear-animation-delay="500">
+								<img src="img/lazy.png" data-src="img/porto_dots.png" width="154" height="146"
+									class="lazyload position-absolute top-auto" alt="6 reasons"
+									data-plugin-float-element
+									data-plugin-options="{'startPos': 'none', 'speed': 3, 'transition': true}"
+									style="bottom: 184px; left: 70px;">
+							</div>
+							<div class="text-reasons">
+								<label class="text-color-light appear-animation z-index-1"
+									data-appear-animation="blurIn" data-appear-animation-delay="250"
+									data-appear-animation-duration="750">6</label>
+								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
+									data-appear-animation-delay="450" data-appear-animation-duration="750">Reasons</h3>
+								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
+									data-appear-animation-delay="750" data-appear-animation-duration="750"> to Choose
+									Khana Khajana</h3>
+								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
+									data-appear-animation-delay="950" data-appear-animation-duration="750"><span
+										class="highlight-word light"> for Catering
+									</span></h3>
+							</div>
+						</div>
+						<div class="col-lg-5 col-xl-4 ps-lg-4 ps-xl-5 mb-5">
+							<h2 class="text-6 font-weight-semibold line-height-2 mb-2 appear-animation"
+								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1150"
+								data-appear-animation-duration="750">With Khana Khajana, your event is not just another
+								gathering</h2>
+							<p class="custom-text-color-1 line-height-5 appear-animation"
+								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1350"
+								data-appear-animation-duration="750">it’s a memorable culinary journey that
+								delights every guest!</p>
+						</div>
+					</div>
+					<div class="row justify-content-center mt-md-5 mb-4 pt-lg-4">
+						<div class="col-lg-11">
+							<div class="row justify-content-center">
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="Authentic Flavors,
+									Every Bite" src="img/lazy.png" data-src="img/index/1.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">1</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">Authentic Flavors,
+											Every Bite
+
+										</h4>
+									</div>
+									<p class="pe-5 ">We bring you the rich, traditional taste of
+										hand-crafted recipes made with fresh, high-quality ingredients. Our dishes are
+										crafted to perfection, ensuring an unforgettable culinary experience.
+									</p>
+								</div>
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="Customized Menus for Every Occasion
+									" src="img/lazy.png" data-src="img/index/2.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">2</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">Customized Menus for
+											Every Occasion
+										</h4>
+									</div>
+									<p class="pe-5 ">Whether it's a wedding, corporate event,
+										birthday, or family gathering, we tailor our menu to suit your preferences,
+										dietary needs, and theme, making your event truly special.
+
+									</p>
+								</div>
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="Flawless Presentation & Service
+									" src="img/lazy.png" data-src="img/index/3.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">3</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">Flawless
+											Presentation & Service
+										</h4>
+									</div>
+									<p class="pe-5 ">We believe great food deserves great
+										presentation. Our catering service ensures visually stunning platters, elegant
+										setups, and impeccable service that leaves a lasting impression.
+									</p>
+								</div>
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="Unmatched Quality & Hygiene
+									" src="img/lazy.png" data-src="img/index/4.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">4</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">Unmatched Quality &
+											Hygiene
+										</h4>
+									</div>
+									<p class="pe-5 ">We maintain the highest standards of cleanliness
+										and food safety, ensuring that every dish is prepared with care and meets
+										top-tier quality standards.
+									</p>
+								</div>
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="From Small Gatherings to Grand Feasts
+									" src="img/lazy.png" data-src="img/index/5.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">5</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">From Small
+											Gatherings to Grand Feasts
+										</h4>
+									</div>
+									<p class="pe-5 ">Whether you need catering for an intimate
+										gathering or a large-scale celebration, we have the expertise and capacity to
+										serve delicious meals without compromising on taste or efficiency.
+
+									</p>
+								</div>
+								<div class="col-10 col-sm-6 col-lg-4 image-box appear-animation"
+									data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700"
+									data-appear-animation-duration="750">
+									<img class="lazyload img-fluid" alt="Affordable Luxury with No Compromises
+									" src="img/lazy.png" data-src="img/index/6.jpg">
+									<div class="d-flex align-items-center mb-2">
+										<span
+											class="text-color-dark font-weight-extra-bold text-12 me-2 line-height-1">6</span>
+										<h4 class="d-flex flex-column font-weight-bold text-5 mb-0">Affordable Luxury
+											with No Compromises
+										</h4>
+									</div>
+									<p class="pe-5 ">Exceptional catering doesn’t have to break the
+										bank. We offer premium-quality food at competitive prices, ensuring that you get
+										the best value for your money.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="text-center">
+						<a href="https://themeforest.net/checkout/from_item/4106987?license=regular&support=bundle_6month&ref=Okler"
+							class="btn btn-dark btn-rounded btn-modern btn-px-5 text-3 appear-animation"
+							data-appear-animation="fadeIn" data-appear-animation-delay="300" target="_blank">Explore Our
+							Catering</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="section section-no-border section-angled bg-color-grey m-0">
+				<div class="section-angled-layer-top section-angled-layer-increase-angle"
+					style="padding: 5rem 0; background-color: #509b44;"></div>
+
+			</section>
+			<div id="examples" class="container mt-5">
+				<div class="row">
+					<div class="col">
+						<section class="call-to-action with-borders with-button-arrow mb-5">
+							<div class="col-sm-9 col-lg-9">
+								<div class="call-to-action-content">
+									<h3>From Our <strong class="font-weight-extra-bold">Kitchen </strong> to Your Plate
+										we bring you authentic taste
+										to <strong class="font-weight-extra-bold">your table!</strong>
+									</h3>
+									<p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/17323669116"
+											target="_blank">+1 732 366 9116</a> for others</p>
+								</div>
+							</div>
+							<div class="col-sm-3 col-lg-3">
+								<div class="call-to-action-btn">
+									<a href="contact-us.html" class="btn btn-modern text-2 btn-primary">Contact Us</a>
+									<span class="arrow hlb d-none d-md-block" data-appear-animation="rotateInUpLeft"
+										style="left: 100%; top: -32px;"></span>
+								</div>
+							</div>
+						</section>
+					</div>
+				</div>
+			</div>
 			<section class="section section-height-3 bg-color-light border-0 m-0">
-				<div class="container pt-2">
+				<div class="container ">
 					<div class="row">
 						<div class="col text-center">
 							<h2 class="text-color-primary positive-ls-3 text-4 line-height-1 mb-2 appear-animation"
@@ -637,9 +865,11 @@
 					<div class="row text-center pb-5">
 						<div class="col">
 							<ul class="social-icons social-icons-clean custom-social-icons mb-3">
-								<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
+								<li class="social-icons-facebook"><a
+										href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
 										title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-								<li class="social-icons-instagram"><a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+								<li class="social-icons-instagram"><a
+										href="https://www.instagram.com/khana_khazana1760/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
@@ -654,19 +884,21 @@
 		<script src="vendor/jquery.countdown/jquery.countdown.min.js"></script>
 
 		<!-- Theme Base, Components and Settings -->
+		<!-- Vendor -->
+		<script src="vendor/plugins/js/plugins.min.js"></script>
+
+		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
 
 		<!-- Current Page Vendor and Views -->
-		<script src="js/views/view.contact.js"></script>
-
-		<!-- Demo -->
-		<script src="js/demos/demo-church.js"></script>
+		<script src="js/views/view.landing.js"></script>
 
 		<!-- Theme Custom -->
 		<script src="js/custom.js"></script>
 
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
+
 </body>
 
 </html>
