--- a/catering.html
+++ b/catering.html
@@ -208,7 +208,8 @@
                                 <b>Chef
                                     Dakshesh Shah</b>, we bring the richness of authentic Indian flavors to your special
                                 occasions. Whether it's a grand wedding, a corporate event, or an intimate gathering,
-                                our catering services ensure a memorable feast for you and your guests.</p>
+                                our catering services ensure a memorable feast for you and your guests.
+                            </p>
 
                             <h2 class="font-weight-bold">Why Choose Our Catering?</h2>
                             <p>We take pride in offering customized catering solutions crafted with the finest
@@ -232,8 +233,8 @@
                                         we bring you authentic taste
                                         to <strong class="font-weight-extra-bold">your table!</strong>
                                     </h3>
-                                    <p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/17323669116"
-                                            target="_blank">+1 732 366 9116</a> for others</p>
+                                    <p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/13017897496"
+                                            target="_blank">+1 301 789 7496</a> for others</p>
                                 </div>
                             </div>
                             <div class="col-sm-3 col-lg-3">
