--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 									data-appear-animation-delay="450" data-appear-animation-duration="750">Reasons</h3>
 								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
 									data-appear-animation-delay="750" data-appear-animation-duration="750"> to Choose
-									Khana Khajana</h3>
+									Khana Khazana</h3>
 								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
 									data-appear-animation-delay="950" data-appear-animation-duration="750"><span
 										class="highlight-word light"> for Catering
@@ -438,7 +438,7 @@
 						<div class="col-lg-5 col-xl-4 ps-lg-4 ps-xl-5 mb-5">
 							<h2 class="text-6 font-weight-semibold line-height-2 mb-2 appear-animation"
 								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1150"
-								data-appear-animation-duration="750">With Khana Khajana, your event is not just another
+								data-appear-animation-duration="750">With Khana Khazana, your event is not just another
 								gathering</h2>
 							<p class="custom-text-color-1 line-height-5 appear-animation"
 								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1350"
@@ -580,8 +580,9 @@
 										we bring you authentic taste
 										to <strong class="font-weight-extra-bold">your table!</strong>
 									</h3>
-									<p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/17323669116"
-											target="_blank">+1 732 366 9116</a> for others</p>
+									<p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/13017897496"
+											target="_blank">
+											+1 301 789 7496</a> for others</p>
 								</div>
 							</div>
 							<div class="col-sm-3 col-lg-3">
