--- a/catering.html
+++ b/catering.html
@@ -231,10 +231,16 @@
                                 <div class="call-to-action-content">
                                     <h3>From Our <strong class="font-weight-extra-bold">Kitchen </strong> to Your Plate
                                         we bring you authentic taste
-                                        to <strong class="font-weight-extra-bold">your table!</strong>
+                                        to your<strong class="font-weight-extra-bold"> table and Occasion!</strong>
                                     </h3>
-                                    <p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/13017897496"
-                                            target="_blank">+1 301 789 7496</a> for others</p>
+
+
+                                    <p class="mb-0">Reach us on WhatsApp:
+                                        <a href="https://wa.me/+17743316089" target="_blank">+1 774-331-6089</a> or
+                                        <a href="https://wa.me/+13017897496" target="_blank">+1 301-789-7496</a> for
+                                        others
+                                    </p>
+
                                 </div>
                             </div>
                             <div class="col-sm-3 col-lg-3">
