--- a/index.html
+++ b/index.html
@@ -425,7 +425,8 @@
 									data-appear-animation="blurIn" data-appear-animation-delay="250"
 									data-appear-animation-duration="750">6</label>
 								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
-									data-appear-animation-delay="450" data-appear-animation-duration="750">Reasons</h3>
+									data-appear-animation-delay="450" data-appear-animation-duration="750"
+									style="background-color: #e05a26;">Reasons</h3>
 								<h3 class="text-4 text-md-6 appear-animation" data-appear-animation="fadeInRightShorter"
 									data-appear-animation-delay="750" data-appear-animation-duration="750"> to Choose
 									Khana Khazana</h3>
@@ -578,11 +579,13 @@
 								<div class="call-to-action-content">
 									<h3>From Our <strong class="font-weight-extra-bold">Kitchen </strong> to Your Plate
 										we bring you authentic taste
-										to <strong class="font-weight-extra-bold">your table!</strong>
+										to your<strong class="font-weight-extra-bold"> table and Occasion!</strong>
 									</h3>
-									<p class="mb-0">Reach us on WhatsApp: <a href="https://wa.me/13017897496"
-											target="_blank">
-											+1 301 789 7496</a> for others</p>
+									<p class="mb-0">Reach us on WhatsApp:
+										<a href="https://wa.me/+17743316089" target="_blank">+1 774-331-6089</a> or
+										<a href="https://wa.me/+13017897496" target="_blank">+1 301-789-7496</a> for
+										others
+									</p>
 								</div>
 							</div>
 							<div class="col-sm-3 col-lg-3">
