--- a/index.html
+++ b/index.html
@@ -345,55 +345,95 @@
 				</div>
 			</section>
 
-			<section class="section section-no-border pb-0  mb-0">
+			<section class="section section-no-border pb-0 mb-0">
 				<div class="container pt-4">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-4">
 							<h2 class="text-7 font-weight-semibold line-height-2 mb-2">Catering Excellence for Every
 								Occasion</h2>
-							<p>Enjoy our Regular, Swaminarayan, Jain, or Customized Catering – delicious meals tailored
+							<p>Enjoy our Regular, Swaminarayan, Jain, Customized, or Vegan Catering – delicious meals
+								tailored
 								to your event, straight from our kitchen.</p>
 						</div>
-						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
-							<img src="img/catering/icons/REGULAR.png" alt="Regular Catering" class="img-fluid"
-								style="width: 50px; height: 50px;">
-							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Regular<br>Catering</h4>
-						</div>
-						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
-							<img src="img/catering/icons/SWAMINARAYAN.png" alt="Swaminarayan Catering" class="img-fluid"
-								style="width: 50px; height: 50px;">
-							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Swaminarayan<br>Catering
-							</h4>
-						</div>
-						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
-							<img src="img/catering/icons/JAIN.png" alt="Jain Catering" class="img-fluid"
-								style="width: 50px; height: 50px;">
-							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Jain<br>Catering</h4>
-						</div>
-						<div class="col-sm-4 col-lg-auto icon-box text-center mb-4">
-							<img src="img/catering/icons/CUSTOMIZE.png" alt="Customize Catering" class="img-fluid"
-								style="width: 50px; height: 50px;">
-							<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Customize<br>Catering
-							</h4>
-						</div>
-						<div class="col-sm-12">
-							<hr class="my-5">
-							<h2 class="font-weight-bold text-center text-10 pt-3 mb-4">Exquisite Indian Catering for
-								Every Occasion</h2>
-						</div>
-						<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
-							<p class="text-4">At Khana Khazana, we bring the magic of authentic Indian cuisine to your
-								special events. Whether it’s an intimate gathering or a grand celebration, our catering
-								services ensure an unforgettable dining experience with rich flavors, vibrant spices,
-								and handcrafted delicacies.</p>
-						</div>
-						<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
-							<p class="text-4">Our expert chefs carefully curate menus that blend traditional recipes
-								with modern culinary artistry, ensuring every dish is a feast for the senses. From
-								weddings and corporate events to private parties and cultural festivities, we cater to
-								all occasions with passion and excellence.</p>
+						<div class="col-8">
+							<div class="row text-center justify-content-between">
+								<!-- First Row: Catering Types -->
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/SWAMINARAYAN.png" alt="Swaminarayan Catering"
+										class="img-fluid" style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">
+										Swaminarayan<br>Catering</h4>
+								</div>
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/JAIN.png" alt="Jain Catering" class="img-fluid"
+										style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Jain <br>Catering
+									</h4>
+								</div>
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/REGULAR.png" alt="Regular Catering" class="img-fluid"
+										style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">
+										Regular<br>Catering</h4>
+								</div>
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/CUSTOMIZE.png" alt="Customize Catering"
+										class="img-fluid" style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">
+										Customize<br>Catering</h4>
+								</div>
+							</div>
+							<!-- Second Row: Catering Categories -->
+							<div class="row text-center justify-content-between mt-3">
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/Corporate-events.png" alt="Corporate Events"
+										class="img-fluid" style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Corporate<br>
+										Events
+									</h4>
+								</div>
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/Wedding.png" alt="Wedding" class="img-fluid"
+										style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Wedding</h4>
+								</div>
+								<div class="col-sm-3  mb-2 ">
+									<img src="img/catering/icons/Business-event.png" alt="Business Event/meet"
+										class="img-fluid" style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Business <br>
+										Event/Meet
+									</h4>
+								</div>
+								<div class="col-sm-3  mb-2">
+									<img src="img/catering/icons/Small-get-togather.png" alt="Small get-togather"
+										class="img-fluid" style="width: 50px; height: 50px;">
+									<h4 class="font-weight-bold custom-font-size-2 line-height-3 mb-0">Small<br>
+										get-togather</h4>
+								</div>
+
+
+							</div>
 						</div>
 					</div>
+
+					<div class="col-sm-12">
+						<hr class="my-5">
+						<h2 class="font-weight-bold text-center text-10 pt-3 mb-4">Exquisite Indian Catering for Every
+							Occasion</h2>
+					</div>
+					<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
+						<p class="text-4">At Khana Khazana, we bring the magic of authentic Indian cuisine to your
+							special events. Whether it’s an intimate gathering or a grand celebration, our catering
+							services ensure an unforgettable dining experience with rich flavors, vibrant spices,
+							and handcrafted delicacies.</p>
+					</div>
+					<div class="col-lg-8 offset-lg-2 px-lg-0 text-center">
+						<p class="text-4">Our expert chefs carefully curate menus that blend traditional recipes
+							with modern culinary artistry, ensuring every dish is a feast for the senses. From
+							weddings and corporate events to private parties and cultural festivities, we cater to
+							all occasions with passion and excellence.</p>
+					</div>
+
 					<div class="image-wrapper position-relative z-index-3 appear-animation text-center"
 						data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500"
 						data-appear-animation-duration="750" style="height: 0; padding-bottom: 16%;">
@@ -402,6 +442,8 @@
 					</div>
 				</div>
 			</section>
+
+
 
 			<section class="section section-no-border section-angled mt-5 section-dark pb-0 m-0"
 				style="background-repeat: no-repeat; background-color: #509b44 !important;"
@@ -441,9 +483,9 @@
 								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1150"
 								data-appear-animation-duration="750">With Khana Khazana, your event is not just another
 								gathering</h2>
-							<p class="custom-text-color-1 line-height-5 appear-animation"
-								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1350"
-								data-appear-animation-duration="750">it’s a memorable culinary journey that
+							<p class=" line-height-5 appear-animation" data-appear-animation="fadeInRightShorter"
+								data-appear-animation-delay="1350" data-appear-animation-duration="750">it’s a memorable
+								culinary journey that
 								delights every guest!</p>
 						</div>
 					</div>
@@ -558,9 +600,9 @@
 						</div>
 					</div>
 					<div class="text-center">
-						<a href="https://themeforest.net/checkout/from_item/4106987?license=regular&support=bundle_6month&ref=Okler"
+						<a href="catering.html"
 							class="btn btn-dark btn-rounded btn-modern btn-px-5 text-3 appear-animation"
-							data-appear-animation="fadeIn" data-appear-animation-delay="300" target="_blank">Explore Our
+							data-appear-animation="fadeIn" data-appear-animation-delay="300">Explore Our
 							Catering</a>
 					</div>
 				</div>
@@ -877,7 +919,7 @@
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
-								Khazana Made By <a href="https://keryar.com/"> KERYAR.</a></p>
+								Khazana Made By <a href="https://keryar.com/" target="_blank"> KERYAR.</a></p>
 						</div>
 					</div>
 				</div>
